Selectores en CSS

--- a/2/index.html
+++ b/2/index.html
@@ -6,10 +6,12 @@
 
     <div class="prueba" id="primero">
         Soy un div
+        <input type="text">
     </div>
     
     <div class="prueba" id="segundo">
         Soy otro div
+        <input type="text">
     </div>
     
     </body>
