--- a/5/index.html
+++ b/5/index.html
@@ -5,11 +5,13 @@
         <meta charset="utf-8" />
     </head>
     <body>
-    
-
         
 
-
+       <div id="mainContainer"> 
+            <div id="cabezal"></div>
+            <div id="sidebar"></div>
+            <div id="content"></div>
+       </div>
 
     </body>
 </html>
